--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,25 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+# 운영체제별 파일들
+.DS_Store
+Thumbs.db
+
+# IDE 관련 파일들 (VSCode, Eclipse 등)
+.vscode/
+.classpath
+.project
+.settings/
+
+# 빌드 결과물 및 디버깅 관련 파일들
+/bin/
+/build/
+*.log
+*.class
+
+# 환경설정 파일들
+*.env
+
+# npm 관련 폴더 무시
+node_modules/
+.cache/
