--- a/backend/practice/pom.xml
+++ b/backend/practice/pom.xml
@@ -56,8 +56,9 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.33</version> 
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -166,12 +167,17 @@
 	</dependencies>
 
 	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-				<mainClass>com.example.demo.GundamApplication</mainClass> 
+					<mainClass>com.example.demo.GundamApplication</mainClass> 
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
@@ -191,7 +197,6 @@
                     <execution>
                         <goals>
                             <goal>process</goal>
-                            
                         </goals>
                         <configuration>
                             <outputDirectory>target/generated-sources/annotations</outputDirectory>
